
   * Fix compatibility with Bazaar 1.7.

   * Use local application data directory on Windows for bzr-svn cache.
     (#231041)

   * No longer show backtrace when a generic DAV error occurs, as 
     this is usually a sign of a server-side error rather than a bug.
	 (#255159)

   * Fix forward declarations of Python types, fixes 
     compilation on mingw. (#263284)

bzr-svn 0.4.11	2008-08-26

bzr-svn 0.4.11~rc2	2008-08-26

  CHANGES

   * Fix setup.py run with python2.4. (#256804)

   * Use rst2html.py rather than rst2html if it is available.

  BUG FIXES

   * Parse http redirect errors in some non-English locales better.

   * Avoid importing tags as branches in svn-import, now that tags are 
     converted to native Bazaar tags.

  FEATURES

   * svn-import will now remove branches removed in Subversion. 
     (#246243). The --keep option can be specified to keep 
	 branches removed in Subversion around.

   * Add --incremental option to bzr-svn for incremental imports.

   * Set revision properties from v3 mappings when possible.
     (#127736)

   * Create tags base directory if it doesn't exist.

   * Add --merged option to svn-push command.

   * Improve tag/branch discovery.

bzr-svn 0.4.11~rc1	2008-08-08

  CHANGES

   * bzr-svn now comes with its own Python bindings for the Subversion 
     libraries, removing the need for a unreleased version of Subversion and 
     improving performance.

     It does however mean the extensions have to be built. This requires 
     the Subversion development libraries and should be possible by 
     simply running ``make`` from the plugin directory. 

	 This fixes some existing bzr-svn related bugs caused by Python-Subversion:

     * KeyboardInterrupts are now no longer swallowed.  (#242217)

     * Crash bug trying to access sites that use self-signed certificates. 
       (#238529)

     * Username and password prompting will now always work.
