@@ -18,6 +18,10 @@ bzr-svn 0.4.12	UNRELEASED
    * Fix forward declarations of Python types, fixes 
      compilation on mingw. (#263284)
 
+  FEATURES
+
+   * Use native Windows password prompter on Windows. (#263287)
+
 bzr-svn 0.4.11	2008-08-26
 
 bzr-svn 0.4.11~rc2	2008-08-26
